Fixed css transition when loading page in dark mode

--- a/public/index.css
+++ b/public/index.css
@@ -19,7 +19,10 @@ body {
   background-color: var(--dl-color-theme-neutral-dark);
   fill: var(--dl-color-theme-neutral-light);
   transition: background-color 0.5s ease, color 0.5s ease;
+  background-color: #FBFAF9;
+  color: #191818;
 }
+
 
 body.dark-mode {
   background-color: #191818;
@@ -327,6 +330,7 @@ background:-webkit-gradient(linear, left top, left bottom, color-stop(0%,#040429
 .features7-root-class-name {
   width: 100%;
 }
+
 @media(max-width: 991px) {
   .features7-content {
     align-items: center;
@@ -349,8 +353,8 @@ background:-webkit-gradient(linear, left top, left bottom, color-stop(0%,#040429
   flex-direction: row;
   justify-content: center;
   padding-top : 20px;
-
 }
+
 .features23-max-width {
   gap: var(--dl-space-space-threeunits);
   display: flex;
@@ -380,17 +384,19 @@ background:-webkit-gradient(linear, left top, left bottom, color-stop(0%,#040429
   background-color: var(--dl-color-theme-accent1);
   color: var(--dl-color-theme-neutral-light);
   transition: box-shadow 0.5s ease, color 0.5s ease;
-
 }
+
 .features23-image {
   width: var(--dl-size-size-small);
   height: var(--dl-size-size-small);
   object-fit: contain;
   border-radius: 0;
 }
+
 .features23-text03 {
   text-align: left;
 }
+
 .features23-container3 {
   flex: 1;
   height: auto;
@@ -403,18 +409,19 @@ background:-webkit-gradient(linear, left top, left bottom, color-stop(0%,#040429
   background-color: var(--dl-color-theme-accent2);
   color: var(--dl-color-theme-neutral-light);
   transition: box-shadow 0.5s ease, color 0.5s ease;
-
-
 }
+
 .features23-image1 {
   width: var(--dl-size-size-small);
   height: var(--dl-size-size-small);
   object-fit: contain;
   border-radius: 0;
 }
+
 .features23-text05 {
   text-align: left;
 }
+
 .features23-container4 {
   flex: 1;
   height: auto;
@@ -427,18 +434,19 @@ background:-webkit-gradient(linear, left top, left bottom, color-stop(0%,#040429
   background-color: var(--dl-color-theme-accent1);
   color: var(--dl-color-theme-neutral-light);
   transition: box-shadow 0.5s ease, color 0.5s ease;
-
-
 }
+
 .features23-image2 {
   width: var(--dl-size-size-small);
   height: var(--dl-size-size-small);
   object-fit: contain;
   border-radius: 0;
 }
+
 .features23-text07 {
   text-align: left;
 }
+
 .features23-container5 {
   flex: 1;
   height: auto;
@@ -451,18 +459,19 @@ background:-webkit-gradient(linear, left top, left bottom, color-stop(0%,#040429
   background-color: var(--dl-color-theme-accent2);
   color: var(--dl-color-theme-neutral-light);
   transition: box-shadow 0.5s ease, color 0.5s ease;
-
-
 }
+
 .features23-image3 {
   width: var(--dl-size-size-small);
   height: var(--dl-size-size-small);
   object-fit: contain;
   border-radius: 0;
 }
+
 .features23-text09 {
   text-align: left;
 }
+
 .features23-container6 {
   flex: 1;
   height: auto;
@@ -475,18 +484,19 @@ background:-webkit-gradient(linear, left top, left bottom, color-stop(0%,#040429
   background-color: var(--dl-color-theme-accent1);
   color: var(--dl-color-theme-neutral-light);
   transition: box-shadow 0.5s ease, color 0.5s ease;
-
-
 }
+
 .features23-image4 {
   width: var(--dl-size-size-small);
   height: var(--dl-size-size-small);
   object-fit: contain;
   border-radius: 0;
 }
+
 .features23-text11 {
   text-align: left;
 }
+
 .features23-container7 {
   flex: 1;
   height: auto;
@@ -499,18 +509,19 @@ background:-webkit-gradient(linear, left top, left bottom, color-stop(0%,#040429
   background-color: var(--dl-color-theme-accent2);
   color: var(--dl-color-theme-neutral-light);
   transition: box-shadow 0.5s ease, color 0.5s ease;
-
-
 }
+
 .features23-image5 {
   width: var(--dl-size-size-small);
   height: var(--dl-size-size-small);
   object-fit: contain;
   border-radius: 0;
 }
+
 .features23-text13 {
   text-align: left;
 }
+
 @media(max-width: 991px) {
   .features23-max-width {
     flex-direction: column;
@@ -519,6 +530,7 @@ background:-webkit-gradient(linear, left top, left bottom, color-stop(0%,#040429
     margin-bottom: var(--dl-space-space-threeunits);
   }
 }
+
 @media(max-width: 767px) {
   .features23-container {
     margin-bottom: var(--dl-space-space-oneandhalfunits);
@@ -542,6 +554,7 @@ background:-webkit-gradient(linear, left top, left bottom, color-stop(0%,#040429
     width: 100%;
   }
 }
+
 @media(max-width: 479px) {
   .features23-max-width {
     gap: var(--dl-space-space-oneandhalfunits);
@@ -562,18 +575,21 @@ background:-webkit-gradient(linear, left top, left bottom, color-stop(0%,#040429
   flex-direction: column;
   justify-content: center;
 }
+
 .footer4-max-width {
   gap: var(--dl-space-space-threeunits);
   display: flex;
   align-items: center;
   flex-direction: column;
 }
+
 .footer4-content {
   gap: var(--dl-space-space-twounits);
   display: flex;
   align-items: center;
   flex-direction: column;
 }
+
 .footer4-logo {
   gap: 24px;
   display: flex;
@@ -581,18 +597,21 @@ background:-webkit-gradient(linear, left top, left bottom, color-stop(0%,#040429
   align-items: flex-start;
   flex-direction: column;
 }
+
 .footer4-logo1 {
   height: 5rem;
   filter : invert(0);
   transition: filter 0.5s ease;
 
 }
+
 .footer4-links {
   gap: var(--dl-space-space-twounits);
   display: flex;
   align-items: flex-start;
   align-items: center;
 }
+
 .footer4-credits {
   gap: var(--dl-space-space-twounits);
   display: flex;
@@ -600,6 +619,7 @@ background:-webkit-gradient(linear, left top, left bottom, color-stop(0%,#040429
   align-items: center;
   flex-direction: column;
 }
+
 .footer4-row {
   display: flex;
   align-self: stretch;
@@ -607,19 +627,23 @@ background:-webkit-gradient(linear, left top, left bottom, color-stop(0%,#040429
   flex-shrink: 0;
   justify-content: space-between;
 }
+
 .footer4-container {
   display: flex;
   align-items: flex-start;
 }
+
 .footer4-footer-links {
   gap: 24px;
   display: flex;
   align-items: flex-start;
 }
+
 .footer4-text6 {
   fill: var(--dl-color-theme-neutral-dark);
   color: inherit;
 }
+
 @media(max-width: 767px) {
   .footer4-row {
     gap: var(--dl-space-space-oneandhalfunits);
@@ -628,6 +652,7 @@ background:-webkit-gradient(linear, left top, left bottom, color-stop(0%,#040429
     justify-content: center;
   }
 }
+
 @media(max-width: 479px) {
   .footer4-max-width {
     gap: var(--dl-space-space-oneandhalfunits);
